feat: configurada JVM para permitir Dynamic Agent Loading
Adicionada a configuração de JVM para habilitar "EnableDynamicAgentLoading" e desativar "Xshare". Essa modificação melhora a flexibilidade ao utilizar agentes dinâmicos durante a execução dos testes.